--- a/css/media.css
+++ b/css/media.css
@@ -956,7 +956,7 @@
     box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
     cursor: pointer;
     width: 100%;
-    margin: 15px 4px;
+    margin: 21px 13px;
     padding: 5px;
   }
   .box:hover {
@@ -1000,7 +1000,7 @@
     box-shadow: 2px 3px rgba(204, 204, 204, 0.561);
     border-radius: 25px;
     background-color: #fff;
-    margin: 30px 5px;
+    margin: 45px 5px;
   }
   .popularBox:hover {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
@@ -1022,7 +1022,7 @@
   .popularBox figcaption {
     line-height: 1.5;
     padding-left: 11px;
-    margin-right: 20px;
+   
   }
   .popularBox figcaption h3 {
     font-size: 1rem;
@@ -1036,7 +1036,7 @@
     font-size: 12px;
   }
   .popularBox img {
-    height: 120px;
+    height: 160px;
   }
   .chart {
     margin-left: 30%;
@@ -1048,7 +1048,7 @@
     margin-top: 10px;
   }
   .textLeft {
-    margin: 23px 10px;
+    margin: 12px 24px;
     background:var(--bgColor) ;
   }
   .textLeft a {
@@ -1062,7 +1062,7 @@
   }
   .activitesContainer {
     align-items: center;
-    margin: 10px auto;
+    margin: -40px auto;
   }
   .activityImg {
     height: 400px;
@@ -1088,7 +1088,7 @@
     background-image: url("../images/activites/boxSmmg3.jpg");
   }
   #activityImg3 {
-    height: 131px;
+    height: 127px;
     background-size: cover;
     background-image: url("../images/activites/a2a.jpg");
   }
@@ -1098,7 +1098,7 @@
     background-image: url("../images/activites/boxBigImg2.jpg");
   }
   #activityImg5 {
-     height: 145px;
+     height: 138px;
      background-size: cover;
     background-image: url("../images/activites/boxSmImg3.jpg");
   }
@@ -1116,15 +1116,17 @@
     display: flex;
     flex-direction: row;
     width: 50%;
-    margin-top: -52px;
     margin-right: 10px;
   }
   #secondSeparation {
-    margin-top: 23px;
+   
     margin-right: 10px;
     display: flex;
     flex-direction: row;
     width: 50%;
+    position: relative;
+    top:0px;
+    margin-left: 20px;
   }
 
   .Boxbig {
@@ -1135,26 +1137,33 @@
     box-shadow: 2px 2px var(--bgColor);
     width: 50%;
   }
+  .Boxbig h4 {
+    padding: 17px;
+    font-size:19px;
+  }
   #firstbigphoto {
     margin-top: 2px;
   }
   #secondbigphoto {
-    height: 441px;
+    height: 448px;
   }
   .rowPhoto {
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin-left:20px;
+    margin-left:29px;
   }
   .boxSmall {
-    height: 174px;
     width: 250px;
     border-radius: 15px;
     border: 1px solid #ccc;
     box-shadow: 2px 2px var(--bgColor);
     margin: 0 auto;
   }
+  .boxSmall h4 {
+    padding: 17px;
+    font-size: 19px;
+}
   .boxSmall:hover {
     box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
       0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1),
@@ -1164,7 +1173,7 @@
 
   #FortdePomegues {
     width: 100%;
-    height: 200px;
+    height: 216px;
     }
 
   #FortdePomegues:hover {
@@ -1173,7 +1182,8 @@
       0 16px 16px rgba(0, 0, 0, 0.1);
   }
   #DuFriout {
-    margin-top: 55px;
+    position:relative;
+    top: 39px;
     width: 100%;
   }
 
@@ -1185,29 +1195,23 @@
 
   #NdeLaGard {
     width: 100%;
-    height: 190px;
     margin-bottom: 33px;
     border: 1px solid #ccc;
   }
 
   #lastSmall {
     width: 100%;
-    height: 190px;
-    margin-bottom: 80px;
     border: 1px solid #ccc;
-    margin-top: 21px;
+    position: relative;
+    top:16px;
   }
-  .boxSmall h4 {
-    padding: 10px;
-    font-size: 14px;
-  }
+  
   .active {
     border-bottom-color: transparent;
   }
   /*===Footer ===*/
   footer {
-    display: flex;
-    margin-top: 40px;
+    display: flex;   
     background-color: var(--bgColor);
     flex-direction: row;
     padding: 20px;
@@ -1218,10 +1222,10 @@
     margin-left: 15px;
   }
   .card:nth-of-type(2) {
-    margin-left: 120px;
+    margin-left: 191px;
   }
   .card:nth-of-type(3) {
-    margin-left: 250px;
+    margin-left: 292px;
   }
 }
 @media (min-width: 1900px) {
@@ -1311,9 +1315,13 @@ nav img {
   #hebergementImg6 {
     height: 195px;
   }
+  .textLeft {
+    margin: 22px;
+   
+}
   .textLeft a {
    font-size:25px;
-   margin-bottom: 10px;
+ 
 }
   #activityImg1 {
     height: 541px;
@@ -1322,7 +1330,7 @@ nav img {
     height:214px;
   }
   #activityImg3 {
-    height: 175px;
+    height: 171px;
   }
   #activityImg4 {
     height: 550px;
@@ -1334,8 +1342,8 @@ nav img {
     height: 200px;
   }
   #DuFriout {
-    margin-top: 113px;
-    height: 218px;
+   top:97px;
+    
   }
   #secondbigphoto {
     height: 596px;
@@ -1343,7 +1351,7 @@ nav img {
   #FortdePomegues{
     position:relative;
     top:0px;
-    height: 253px;
+    height: 277px;
     margin-bottom: 0px;
   }
   #lastSmall {
@@ -1365,7 +1373,7 @@ nav img {
   margin: 0 auto;
 }
   #secondSeparation {
-    margin-top: -53px;
+    margin-top: 0px;
   }
   .chart {
     margin-left: 50%;
