--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,10 @@
       margin-left:243px;
    }
   nav li:nth-of-type(2) {
-    padding-top:30px;
-    padding-left:81px;
-    margin-left: 134px;
-    padding-bottom:10px;
+    padding-top: 30px;
+    padding-left: 52px;
+    margin-left: 164px;
+    padding-bottom: 10px;
     border-bottom: 3px solid #ccc;
 
   }
@@ -82,10 +82,11 @@
   
   .active {
     color: var(--blue);
-    padding-bottom:10px;
-    padding-left:35px;
-    border-bottom:2px solid var(--blue);
-    margin-left:-40px;
+    padding-bottom: 10px;
+    padding-left: 41px;
+    border-bottom: 2px solid var(--blue);
+    margin-left: -42px;
+    padding-right: 72px;
    }
   .firtsBtn .liBtn{
     width: 170px;
@@ -135,13 +136,30 @@
   .box figure {
     flex-direction: column;
   }
-  figure img {
+  /*figure img {
     width: 100%;
     height: 120px;
-    border-top-right-radius: 15px;
+    
+  }*/
+  .hebergementPopulaire{
+    width:40%;
+    height:120px;
     border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
   }
-  
+  #hebergementPopulaire1{
+   background-image:url("../images/hebergement/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg");
+   background-size:cover;
+  }
+  #hebergementPopulaire2{
+    background-image:url("../images/hebergement/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg");
+    background-size:cover;
+   }
+   #hebergementPopulaire3{
+    background-image:url("../images/hebergement/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg");
+    background-size:cover;
+   }
+                         
   .popularBox img {
     width: 40%;
     height: 110px;
@@ -322,10 +340,11 @@
    .information {
     display: flex;
     margin-left: 10px;
-    width: 81%;
+    width: 91%;
+    margin-bottom: 20px;
   }
   .information p{
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
   /* Info section three */
   .disponible {
@@ -349,7 +368,8 @@
   
   /* Hebergements*/
   #hebergement{
-    margin:20px auto;  
+    margin:20px; 
+    padding-top:20px; 
   }
   .hebergementsContainer {
     display: flex;
@@ -508,7 +528,7 @@
     color: var(--blue);
     font-size: 12px;
     margin-top: -25px;
-    margin-left: 40px;
+    margin-left: 29px;
     justify-content: center;
    
   }
@@ -580,14 +600,14 @@
     border-top-right-radius: 15px;
   }
   .activityImg {
-    height: 126px;
+    height: 135px;
     width: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
    
   }
   .activitySmImg {
-    height: 126px;
+    height: 125px;
     width: 100%;    
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -621,15 +641,14 @@
   }
   /*===Footer ===*/
   footer {
-    display: flex;
+    display: flex;    
     margin-top: 40px;
     background-color:var(--bgColor);
     padding-bottom: 40px;
   }
   .card {
     padding: 1rem;
-    line-height: 2;
-    margin-left: 15px;
+    line-height: 2;   
   }
  
  } 
