--- a/css/media.css
+++ b/css/media.css
@@ -84,7 +84,8 @@
 
   .active {
     color: var(--blue);
-    border: none;
+    border-top: 1px solid var(--blue);
+    border-bottom:none;
   }
   .sincrire {
     color: var(--blue);
@@ -590,8 +591,7 @@
     display: flex;
     flex-direction: row;
     background-color: var(--bgColor);
-    padding: 20px;
-  }
+     }
   .card:nth-of-type(2) {
     margin-left: 120px;
   }
@@ -602,6 +602,12 @@
 
 /**************Desktop**********/
 @media only screen and (width: 1024px){
+
+.active{
+  border-top: 1px solid var(--blue);
+  border-bottom:none;
+  padding:20px;
+}
 .search {
   width: 31% !important;
 }
@@ -624,11 +630,64 @@
 .lastchild {
   width: 189px !important;
 }
+
 .popularTitle {
   font-size:17px !important;
 }
 .hebergementTitle {
   font-size: 17px!important;
+}
+.box{
+  height:190px !important;
+}
+#hebergementImg {
+  height: 100px !important;
+ 
+}
+#hebergementImg2 {
+  height: 97px !important;
+ 
+}#hebergementImg3 {
+  height: 97px !important;
+ 
+}#hebergementImg4 {
+  height: 97px !important;
+ 
+}#hebergementImg5 {
+  height: 97px !important;
+ 
+}#hebergementImg6 {
+  height: 97px !important;
+ 
+}
+.popularBox img {
+  height: 128px !important;
+}
+.startBoxPopular {
+  margin-left: 37px !important;
+}
+.Boxbig h4 {
+  padding: 15px !important;
+  font-size: 13px !important;
+}
+.boxSmall h4 {
+  padding: 15px !important;
+  font-size: 13px !important;
+}
+#activityImg3 {
+  height: 87px !important;
+}
+#DuFriout {
+  top:82px !important;
+ }
+ footer {
+   padding:0px !important;
+}
+.card:nth-of-type(2) {
+   margin-left:74px !important;
+}
+.card:nth-of-type(3) {
+   margin-left: 97px !important; 
 }
 }
 
@@ -648,7 +707,7 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
-    margin-top: -30px;
+    margin-top: -40px;
   }
   nav {
     width: 100%;
@@ -687,8 +746,11 @@
     color: #000;
   }
   .active {
+    border-top: 1px solid var(--blue);
+    border-bottom:none;
     color: var(--blue);
     padding-left: 40px;
+    padding-top:20px;
   }
   .sincrire {
     color: var(--blue);
@@ -841,8 +903,7 @@
     border-radius: 50%;
     color: var(--blue);
     border: 1px solid #ccc;
-    margin-top: -2px;
-  }
+   }
   .information p {
     font-size: 20px;
   }
@@ -883,6 +944,7 @@
   .imageTitle {
     margin-left: 13px;
     padding-top: 20px;
+    margin-bottom: 42px;
   }
   .imageTitle h2 {
     font-size: 1.3rem;
@@ -1144,9 +1206,9 @@
   #firstbigphoto {
     margin-top: 2px;
   }
-  #secondbigphoto {
+ /* #secondbigphoto {
     height: 448px;
-  }
+  }*/
   .rowPhoto {
     display: flex;
     flex-direction: column;
@@ -1267,8 +1329,20 @@ nav img {
  line-height: 2;
   font-weight: bolder;
 }
+.information {  
+  margin-top: 40px;
+  margin-bottom: 40px;
+ 
+}
 .information p {
-  font-size: 26px;
+  font-size:2.2rem;
+}
+.round-btn {
+  margin-top:-4px;
+  width: 50px;
+  height: 50px;
+  padding: 9px 18.5px;
+  font-size:1.5rem;
 }
 
    .imageTitle {    
@@ -1345,9 +1419,9 @@ nav img {
    top:97px;
     
   }
-  #secondbigphoto {
+ /* #secondbigphoto {
     height: 596px;
-}
+}*/
   #FortdePomegues{
     position:relative;
     top:0px;
@@ -1378,8 +1452,11 @@ nav img {
   .chart {
     margin-left: 50%;
   }
+  .popularBox{
+    margin-top:60px;
+  }
   .popularBox img {
-    height: 180px;
+    height: 200px;
   }
   .Boxbig h4 {
      font-size: 20px;
